test/conformance/chainsaw/custom-sigstore/standard/basic-deprecated/policy.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: basic-sigstore-test-policy
spec:
  validationFailureAction: Enforce
  background: false
  webhookTimeoutSeconds: 30
  failurePolicy: Fail
  rules:
  - name: keyed-basic-rule
    match:
      any:
      - resources:
          kinds:
          - Pod
    context:
      - name: tufvalues
        configMap:
          name: tufvalues
          namespace: kyverno
    verifyImages:
    - imageReferences:
      - "ttl.sh/*"
      attestors:
      - count: 1
        entries:
        - keyless:
            issuer: "https://kubernetes.default.svc.cluster.local"
            subject: "https://kubernetes.io/namespaces/default/serviceaccounts/default"
            rekor:
              url: "{{ tufvalues.data.REKOR_URL }}"
      required: true
