test/conformance/chainsaw/custom-sigstore/standard/basic-deprecated/policy-assert.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: basic-sigstore-test-policy
status:
  conditions:
  - reason: Succeeded
    status: "True"
    type: Ready
